--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 	fabric_version=0.47.8+1.18.2
+	origins_version=1.4.1
+
+# DatapackProperties
+	use_license=false
+	example_datapack_name=ExampleDatapack
+	example_datapack_version=1.0.0
