--- a/gradle.properties
+++ b/gradle.properties
@@ -8,15 +8,22 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.13.3
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	mod_version=1.0.0
+	maven_group=origins.example
+	archives_base_name = origins-example-datapacks
 
 # Dependencies
 	fabric_version=0.47.8+1.18.2
+	# check latest version of Origins on https://github.com/apace100/origins-fabric/releases
 	origins_version=1.4.1
 
 # DatapackProperties
+	# Put the project's LICENSE file to datapack release if set to true
+	# Defaulted to false, representing All Rights Reserved
 	use_license=false
-	example_datapack_name=ExampleDatapack
+	# Datapack's name
+	example_datapack_name=Example Datapack
+	another_example_datapack_name=Another Example Datapack
+	# Datapack's version
 	example_datapack_version=1.0.0
+	another_example_datapack_version=1.1.0
